Add Gradle, CI, and reformat (#28)
* build: add gradle to handle more complex workflows

* chore: reformat with google format & add CI for checkstyle

* ci(style): split workflows for pr and push events

* build: add junit deps for testing & allow gradlew runs

* ci(test): fix gradle test workflow